<resources>
    <string name="app_name">NoteApp</string>
    <string name="splash_logo">splashLogo</string>
    <string name="note_app">NOTE APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Home fragment</string>
    <string name="floatingbutton">floatingButton</string>
    <string name="floatingaddbutton">floatingaddbutton</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="are_you_sure_want_to_delete_n_this_note">Are you sure want to delete\n This Note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
</resources>