<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragment.EditNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/title"
            android:maxLines="1"
            android:background="@drawable/edit_txt_shape"
            android:inputType="text|textAutoComplete|textAutoCorrect"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textSize="28sp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />
        <EditText
            android:id="@+id/edtNotes"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="8dp"
            android:hint="@string/notes"
            android:gravity="start"
            android:background="@drawable/edit_txt_shape"
            android:inputType="text|textAutoComplete|textAutoCorrect"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textSize="22sp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_done_24"
        android:focusable="true"
        android:backgroundTint="@color/red"
        android:layout_gravity="bottom|end"
        android:layout_margin="36dp"
        android:contentDescription="@string/floatingaddbutton"/>

</FrameLayout>